[package]
name = "drlogseeker"
version = "0.1.0"
edition = "2024"
authors = ["loxoron218"]
description = "An application for analyzing DR values in log files"

[dependencies]
gtk4 = "0.8"
libadwaita = "0.6"
walkdir = "2.5"
regex = "1.10"
anyhow = "1.0"
once_cell = "1.19"
glib = "0.19"
gio = "0.19"
encoding_rs = "0.8"
rayon = "1.9"
async-channel = "2.2"
futures-util = "0.3"

[build-dependencies]
glib-build-tools = "0.19"
